<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.steve4744</groupId>
  <artifactId>WhatIsThis</artifactId>
  <version>5.6-SNAPSHOT</version>
  <name>WhatIsThis</name>
  <description>A Minecraft utility plugin which displays block and entity information</description>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <licenses>
    <license>
        <name>MIT License</name>
        <url>http://www.opensource.org/licenses/mit-license.php</url>
        <distribution>repo</distribution>
	</license>
  </licenses>

  <repositories>
    <!-- Spigot API Repo -->
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!-- PlaceholderAPI Repo -->
    <repository>
        <id>placeholderapi-repo</id>
        <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <!-- Nova-API Repo -->
    <repository>
        <id>xenondevs-releases</id>
        <name>xenondevs repository</name>
        <url>https://repo.xenondevs.xyz/releases</url>
    </repository>
    <!-- SlimeFun4, ItemsAdder & Craftory Repo -->
    <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
    <!-- MythicMobs Repo -->
    <repository>
        <id>nexus</id>
        <name>Lumine Releases</name>
        <url>https://mvn.lumine.io/repository/maven-public/</url>
    </repository>
    <!-- Oraxen Repo -->
    <repository>
        <id>oraxen-releases</id>
        <name>Oraxen Repository</name>
        <url>https://repo.oraxen.com/releases</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Spigot API -->
    <dependency>
        <groupId>org.spigotmc</groupId>
        <artifactId>spigot-api</artifactId>
        <version>1.20.5-R0.1-SNAPSHOT</version>
        <scope>provided</scope>
    </dependency>
    <!-- bStats -->
    <dependency>
        <groupId>org.bstats</groupId>
        <artifactId>bstats-bukkit</artifactId>
        <version>3.0.0</version>
        <scope>compile</scope>
    </dependency>
    <!-- PlaceholderAPI -->
    <dependency>
        <groupId>me.clip</groupId>
        <artifactId>placeholderapi</artifactId>
        <version>2.11.5</version>
        <scope>provided</scope>
    </dependency>
    <!-- Slimefun -->
    <dependency>
        <groupId>com.github.Slimefun</groupId>
        <artifactId>Slimefun4</artifactId>
        <version>RC-35</version>
        <scope>provided</scope>
    </dependency>
    <!-- Craftory -->
    <dependency>
        <groupId>com.github.steve4744</groupId>
        <artifactId>craftory-tech</artifactId>
        <version>v0.8.3</version>
        <scope>provided</scope>
        <exclusions>
          <exclusion>
              <groupId>com.github.oraxen</groupId>
              <artifactId>Oraxen</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <!-- Nova -->
    <dependency>
        <groupId>xyz.xenondevs.nova</groupId>
        <artifactId>nova-api</artifactId>
        <version>0.14.10</version>
        <scope>provided</scope>
    </dependency>
    <!-- ItemsAdder -->
    <dependency>
        <groupId>com.github.LoneDev6</groupId>
        <artifactId>api-itemsadder</artifactId>
        <version>3.6.2-beta-r3-b</version>
        <scope>provided</scope>
    </dependency>
    <!-- Oraxen -->
    <dependency>
        <groupId>com.github.steve4744</groupId>
        <artifactId>oraxen</artifactId>
        <version>1.164.0</version>
        <scope>provided</scope>
        <exclusions>
          <exclusion>
              <groupId>*</groupId>
              <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
    </dependency>
    <!-- MythicMobs -->
    <dependency>
        <groupId>io.lumine</groupId>
        <artifactId>Mythic-Dist</artifactId>
        <version>5.5.0</version>
        <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
	<defaultGoal>clean package</defaultGoal>

    <sourceDirectory>src/main/java</sourceDirectory>

    <resources>
      <resource>
          <targetPath>.</targetPath>
          <filtering>true</filtering>
          <directory>src/main/resources</directory>
          <includes>
              <include>plugin.yml</include>
              <include>config.yml</include>
              <include>custom.yml</include>
              <include>lang/</include>
          </includes>
      </resource>
    </resources>

    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.7.1</version>
          <configuration>
              <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.3</version>
          <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
                <artifactSet>
                </artifactSet>
                <filters>
                  <filter>
                      <artifact>*:*</artifact>
                      <excludes>
                          <exclude>META-INF/</exclude>
                      </excludes>
                  </filter>
                </filters>
                <relocations>
                    <relocation>
                        <pattern>org.bstats</pattern>
                        <shadedPattern>io.github.steve4744.whatisthis.bstats</shadedPattern>
                    </relocation>
                </relocations>
            </configuration>
            <executions>
              <execution>
                  <phase>package</phase>
                  <goals>
                      <goal>shade</goal>
                  </goals>
              </execution>
            </executions>
      </plugin>
    </plugins>
  </build>
</project>